--- a/test.html
+++ b/test.html
@@ -1,48 +1,26 @@
 <!DOCTYPE html>
 
-<html ng-app>
+<html ng-app="githubViewer">
 
 <head>
-    <script src="https://code.angularjs.org/1.3.0-beta.5/angular.js">
-    </script>
-    <script type="text/javascript">
-        var MainCtrl = function ($scope, $http) {
-
-            var onUserComplete = function (response) {
-                $scope.user = response.data;
-            };
-
-            var onError = function (reason) {
-                $scope.error = "Could not fetch the user";
-            };
-
-
-            $http.get("https://api.github.com/users/NicholasMooney")
-                .then(onUserComplete, onError);
-
-        }
-    </script>
-
+    <script src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body ng-controller="MainCtrl">
+    <h1>{{message}}</h1>
+
     <div>
         {{error}}
     </div>
-    
-    <div>
-        {{user.name}}
-    </div>
-    <div>
-        {{user.location}}
-    </div>
-    <br>
-    <br>
-    <div>
-        <img ng-src="{{user.avatar_url}}" alt="Github photo">
-    </div>
-    <div>
-        {{user}}
+
+    <form name="searchUser" ng-submit="search(username)">
+        <input type="search" required name="" value="" placeholder "Username to find" ng-model="username" />
+        <input type="submit" name="" value="Search" />
+    </form>
+
+    <div ng-include="'userdetails.html'" ng-show="user">
+
     </div>
 
 </body>
